--- a/src/main/resources/assets/digs_dnd_origins/lang/en_us.json
+++ b/src/main/resources/assets/digs_dnd_origins/lang/en_us.json
@@ -265,6 +265,8 @@
   "power.digs_dnd_origins.gnome/darkvision.description": "Accustomed to life underground, you have superior vision in dark and dim conditions.",
   "power.digs_dnd_origins.gnome/size.name": "Size",
   "power.digs_dnd_origins.gnome/size.description": "You are half as tall as a human. Your size is small.",
+  "power.digs_dnd_origins.gnome/smaller_build.name": "Smaller Build",
+  "power.digs_dnd_origins.gnome/smaller_build.description": "You have 40% less health points and deal 0.5 less damage.",
   "power.digs_dnd_origins.gnome/speed.name": "Speed",
   "power.digs_dnd_origins.gnome/speed.description": "Your base speed is 10% slower.",
   "power.digs_dnd_origins.gnome/subrace.name": "Gnomic Descendance",
@@ -299,5 +301,26 @@
   "power.digs_dnd_origins.half-orc/savage_attacks.name": "Savage Attacks",
   "power.digs_dnd_origins.half-orc/savage_attacks.description": "You deal 20% more melee damage",
   "power.digs_dnd_origins.half-orc/size.name": "Size",
-  "power.digs_dnd_origins.half-orc/size.description": "You are larger than a human, your size is medium."
+  "power.digs_dnd_origins.half-orc/size.description": "You are larger than a human, your size is medium.",
+
+  "power.digs_dnd_origins.halfling/halfling_nimbleness.name": "Halfling Nimbleness",
+  "power.digs_dnd_origins.halfling/halfling_nimbleness.description": "You can move through the space of any creature that is a size larger than you without being slowed by entity collision. This ability can be toggled.",
+  "power.digs_dnd_origins.halfling/lucky.name": "Lucky",
+  "power.digs_dnd_origins.halfling/lucky.description": "You find better loot in chests and when fishing.",
+  "power.digs_dnd_origins.halfling/size.name": "Size",
+  "power.digs_dnd_origins.halfling/size.description": "You are half as tall as a human. You also have 40% less health points and deal 0.5 less damage. Your size is small.",
+  "power.digs_dnd_origins.halfling/smaller_build.name": "Smaller Build",
+  "power.digs_dnd_origins.halfling/smaller_build.description": "You have 40% less health points and deal 0.5 less damage.",
+  "power.digs_dnd_origins.halfling/speed.name": "Speed",
+  "power.digs_dnd_origins.halfling/speed.description": "Your base speed is 10% slower.",
+  "power.digs_dnd_origins.halfling/subrace.name": "Halfling Descendance",
+  "power.digs_dnd_origins.halfling/subrace.description": "Once you select this race you will select a subrace. You have a choice of lightfoot or stout halfling, which vary slightly in health and skills.",
+
+  "power.digs_dnd_origins.halfling/lightfoot/naturally_stealthy.name": "Naturally Stealthy",
+  "power.digs_dnd_origins.halfling/lightfoot/naturally_stealthy.description": "Sneaking while up against an entity larger than you will render you (but not your armor) invisible.",
+
+  "power.digs_dnd_origins.halfling/stout/ability_score_increase.name": "Ability Score Increase",
+  "power.digs_dnd_origins.halfling/stout/ability_score_increase.description": "You have increased constitution. You have 35% less health points rather than the 40% less of other small races.",
+  "power.digs_dnd_origins.halfling/stout/stout_resilience.name": "Stout Resilience",
+  "power.digs_dnd_origins.halfling/stout/stout_resilience.description": "Poisons last half as long for you."
 }
