--- a/src/main/resources/assets/digs_dnd_origins/lang/en_us.json
+++ b/src/main/resources/assets/digs_dnd_origins/lang/en_us.json
@@ -139,7 +139,7 @@
   "origin.digs_dnd_origins.skills/survival.description": "You gain an additional hunger bar for each item you eat.",
 
   "power.digs_dnd_origins.dragonborn/ability_score_increase.name": "Ability Score Increase",
-  "power.digs_dnd_origins.dragonborn/ability_score_increase.description": "Due to your increased strength, you deal 1 extra melee damage.",
+  "power.digs_dnd_origins.dragonborn/ability_score_increase.description": "Due to your increased strength, you deal 2 extra melee damage.",
   "power.digs_dnd_origins.dragonborn/breath_weapon_description.name": "Breath Weapon",
   "power.digs_dnd_origins.dragonborn/breath_weapon_description.description": "You can breathe out before you in a line or cone depending on your subrace, damaging your enemies. You regain the ability to do so after a short or long rest.",
   "power.digs_dnd_origins.dragonborn/damage_resistance_description.name": "Damage Resistance",
@@ -150,6 +150,8 @@
   "power.digs_dnd_origins.dragonborn/size.description": "You are larger than a human, your size is medium.",
   "power.digs_dnd_origins.dragonborn/subrace.name": "Draconic Ancestry",
   "power.digs_dnd_origins.dragonborn/subrace.description": "Once you select this race you will select a subrace. Your subrace will determine your dragonborn color and element.",
+  "power.digs_dnd_origins.dragonborn/large_appetite.name": "Large Appetite",
+  "power.digs_dnd_origins.dragonborn/large_appetite.description": "Due to your draconic ancestry, you have a much larger appetite than most, thus requiring you to eat more.",
 
   "power.digs_dnd_origins.dragonborn/black/breath_weapon.name": "Breath Weapon",
   "power.digs_dnd_origins.dragonborn/black/breath_weapon.description": "You can breathe out poison before you in a line, poisoning your enemies. You regain the ability to do so after a short or long rest.",
@@ -199,8 +201,8 @@
   "power.digs_dnd_origins.dwarf/dwarven_combat_training.description": "You have proficiency with axes, dealing +2 damage with them.",
   "power.digs_dnd_origins.dwarf/dwarven_resilience.name": "Dwarven Resilience",
   "power.digs_dnd_origins.dwarf/dwarven_resilience.description": "The poison status effect lasts half as long for you.",
-  "power.digs_dnd_origins.dwarf/dwarven_toughness.name": "Dwarven Toughness",
-  "power.digs_dnd_origins.dwarf/dwarven_toughness.description": "You have 20% less health points rather than the 40% less of other small races. You also deal 0.5 less damage.",
+  "power.digs_dnd_origins.dwarf/ability_score_increase.name": "Ability Score Increase",
+  "power.digs_dnd_origins.dwarf/ability_score_increase.description": "Due to your increased constitution, you have 20% less health points rather than the 40% less of other small races.",
   "power.digs_dnd_origins.dwarf/size.name": "Size",
   "power.digs_dnd_origins.dwarf/size.description": "You are a block and a half tall. Your size is medium.",
   "power.digs_dnd_origins.dwarf/speed.name": "Speed",
@@ -243,7 +245,7 @@
   "power.digs_dnd_origins.elf/dark/superior_darkvision.description": "Accustomed to the Underdark, your vision is superior even to those with normal darkvision.",
 
   "power.digs_dnd_origins.elf/high/ability_score_increase.name": "Ability Score Increase",
-  "power.digs_dnd_origins.elf/high/dwarven_toughness.description": "Due to your increased intelligence, your arcane spell power is increased by 1.",
+  "power.digs_dnd_origins.elf/high/ability_score_increase.description": "Due to your increased intelligence, your arcane spell power is increased by 1.",
   "power.digs_dnd_origins.elf/high/cantrip.name": "Cantrip",
   "power.digs_dnd_origins.elf/high/cantrip.description": "You know one cantrip of your choice from the following list: Firebolt, Poison Spray, Ray of Frost or Lightning Lure. You will pick your cantrip upon selecting this subrace.",
 
@@ -302,6 +304,8 @@
   "power.digs_dnd_origins.half-orc/savage_attacks.description": "You deal 20% more melee damage",
   "power.digs_dnd_origins.half-orc/size.name": "Size",
   "power.digs_dnd_origins.half-orc/size.description": "You are larger than a human, your size is medium.",
+  "power.digs_dnd_origins.half-orc/large_appetite.name": "Large Appetite",
+  "power.digs_dnd_origins.half-orc/large_appetite.description": "Due to your orcish ancestry, you have a much larger appetite than most, thus requiring you to eat more.",
 
   "power.digs_dnd_origins.halfling/halfling_nimbleness.name": "Halfling Nimbleness",
   "power.digs_dnd_origins.halfling/halfling_nimbleness.description": "You can move through the space of any creature that is a size larger than you without being slowed by entity collision. This ability can be toggled.",
@@ -320,7 +324,7 @@
   "power.digs_dnd_origins.halfling/lightfoot/naturally_stealthy.description": "Sneaking while up against an entity larger than you will render you (but not your armor) invisible.",
 
   "power.digs_dnd_origins.halfling/stout/ability_score_increase.name": "Ability Score Increase",
-  "power.digs_dnd_origins.halfling/stout/ability_score_increase.description": "You have increased constitution. You have 35% less health points rather than the 40% less of other small races.",
+  "power.digs_dnd_origins.halfling/stout/ability_score_increase.description": "Due to your increased constitution, tou have 30% less health points rather than the 40% less of other small races.",
   "power.digs_dnd_origins.halfling/stout/stout_resilience.name": "Stout Resilience",
   "power.digs_dnd_origins.halfling/stout/stout_resilience.description": "Poisons last half as long for you.",
 
